I made small corrections with the text, changed the color when hovered in the subscriptions, aligned the text and changed the size

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="gallery">
-            <h1>ГАЛЕРЕЯ</h1>
+            <h1 class="gallery-title">ГАЛЕРЕЯ</h1>
             <div class="grid-container">
                 
                 <div>
