--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 <ul class="ul-informtion header-ul">
                     <li class="li-informtion header-li"><a href="#pronas">ПРО НАС</a></li>
                     <li class="li-informtion header-li"><a href="#subscriptions">АБОНЕМЕНТИ</a></li>
-                    <li class="li-informtion header-li"><a href="">МАГАЗИН</a></li>
+                    <li class="li-informtion header-li"><a href="https://www.instagram.com/sphinx_team_mma_magazine?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">МАГАЗИН</a></li>
                     <li class="li-informtion header-li"><a href="#gallery">ГАЛЕРЕЯ</a></li>
                     <li class="li-informtion header-li"><a href="#footer">КОНТАКТИ</a></li>
                 </ul>
@@ -171,23 +171,23 @@
               </div>
               <div class="social-links">
                 <h3>НАШІ СОЦМЕРЕЖІ</h3>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/telegram.png" alt="Telegram"></a>
-                <a class="viber-icon" href="#"><img src="img/viber (2).png" alt="Viber"></a>
+                <a href="https://www.instagram.com/sphinx_team_mma_cv?igsh=MWtxbDB5bHhvNjhrNw=="><img src="img/instagram.png" alt="Instagram"></a>
+                <a href="https://t.me/sphinx_team_mma"><img src="img/telegram.png" alt="Telegram"></a>
+                <a href="https://invite.viber.com/?g2=AQBcm9s9a38XF0t1mjUPfag3mI%2FBSRwyA7nqQE87PTG%2BLIiFzhJ%2BYv9uo4vIbqa9"><img class="viber-icon"  src="img/viber (2).png" alt="Viber"></a>
               </div>
             </div>
           
             <!-- Навігація -->
             <div class="footer-section-ul">
               <ul class="footer-section-ul footer-section-ul-left">
-                <li><a href="#">ПРО НАС</a></li>
-                <li><a href="#">ГАЛЕРЕЯ</a></li>
+                <li><a href="#pronas">ПРО НАС</a></li>
+                <li><a href="#gallery">ГАЛЕРЕЯ</a></li>
                 <li><a href="#">ЗАПИСАТИСЯ</a></li>
               </ul>
               <ul class="footer-section-ul footer-section-ul-right">
-                <li><a href="#">МАГАЗИН</a></li>
-                <li><a href="#">КОНТАКТИ</a></li>
-                <li><a href="#">АБОНЕМЕНТИ</a></li>
+                <li><a href="https://www.instagram.com/sphinx_team_mma_magazine?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">МАГАЗИН</a></li>
+                <li><a href="#footer">КОНТАКТИ</a></li>
+                <li><a href="#subscriptions">АБОНЕМЕНТИ</a></li>
               </ul>
             </div>
           
