--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
                 <h3>НАШІ СОЦМЕРЕЖІ</h3>
                 <a href="https://www.instagram.com/sphinx_team_mma_cv?igsh=MWtxbDB5bHhvNjhrNw=="><img src="img/instagram.png" alt="Instagram"></a>
                 <a href="https://t.me/sphinx_team_mma"><img src="img/telegram.png" alt="Telegram"></a>
-                <a href="https://invite.viber.com/?g2=AQBcm9s9a38XF0t1mjUPfag3mI%2FBSRwyA7nqQE87PTG%2BLIiFzhJ%2BYv9uo4vIbqa9"><img class="viber-icon"  src="img/viber (2).png" alt="Viber"></a>
+                <a href="https://invite.viber.com/?g2=AQBcm9s9a38XF0t1mjUPfag3mI%2FBSRwyA7nqQE87PTG%2BLIiFzhJ%2BYv9uo4vIbqa9"><img class="viber-icon"  src="img/viber.png" alt="Viber"></a>
               </div>
             </div>
           
